# WowUSB

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST-BALANCED.md  F2FS_BTRFS_TEST_PLAN.md  MANIFEST.in  PROJECT_REORG_PLAN_20250601_050714.md  README-ENHANCED.md  README.md  TECHNICAL_DESIGN.md  WINDOWS11_TO_GO_SPEC.md  index.html  package-lock.json  package.json  package.json.backup  setup.cfg  setup.py  test_ubuntu_22_04.md"  version-info.json  wowusb-ds9-migration-tauri2-complete-2025-10-06-ultrathink-through-this-step-by-step.txt  wowusb-ds9-migration-tauri2-rust-mid-way-through-Mon-6oct2025-07h17.log.txt  wowusb-ds9-steps-to-function-2025-10-05-ultrathink-through-this-step-by-step.txt
.plandex-v2/: projects-v2.json
WowUSB/: __init__.py  bootloader.py  core.py  core.py.backup-20250303-143726  filesystem_handlers.py  filesystem_handlers.py.backup-20250303-141230  filesystem_handlers.py.backup-20250303-152535  grub_manager.py  gui.py  gui.py.backup-20250303-152554  linux_installer.py  list_devices.py  multiboot.py  partitioning.py  utils.py  utils.py.backup-20250303-152626  virtualdisk_handlers.py  virtualdisk_handlers.py.backup-20250303-152649  workaround.py  wowusb  wowusbgui
WowUSB_DS9.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
appimage/: AppRun  wowusbgui.desktop
checklists/: RELEASE_CHECKLIST_20250601_050714.md
debian/: changelog  control  copyright  postinst  postrm  prerm  rules
docs/: CHANGELOG.md  CHECKLIST.md  CODE_REVIEW_ANALYSIS_20251005_084440.md  DOCUMENTATION_MAP.md  F2FS_LINUX_SPEC.md  FUNCTIONALITY_CHECKLIST_20251005_084540.md  FUNCTIONALITY_STATUS_REPORT_20251005_090500.md  IMPLEMENTATION_SUMMARY.md  Initial-Planning-exfat-ntfs-addition-cline_task_mar-3-2025_1-32-04-pm.md  MULTIBOOT_DESIGN.md  PRODUCTION_BUILD.md  ROADMAP.md  (+7 more)
(+73 files in other folders)
