
[metadata]
name = WowUSB-DS9
version = 0.3.0
author = Robin L. M. Cheung, MBA
author_email = robin@robincheung.com
description = Create bootable Windows USB drives with support for large files and Windows-To-Go
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rebots-online/WowUSB
project_urls =
    Bug Tracker = https://github.com/rebots-online/WowUSB/issues
    Documentation = https://github.com/rebots-online/WowUSB/wiki
    Source Code = https://github.com/rebots-online/WowUSB
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Installation/Setup
    Topic :: Utilities

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    termcolor>=1.1.0
    wxPython>=4.0.0
include_package_data = True
zip_safe = False

[options.package_data]
WoeUSB = 
    locale/*/LC_MESSAGES/*.mo
    data/*
    data/*/*
WowUSB = 
    locale/*/LC_MESSAGES/*.mo
    data/*
    data/*/*
    data/bootloaders/*
    data/drivers/*
    data/scripts/*

[options.entry_points]
console_scripts =
    wowusb = WowUSB.core:main
gui_scripts =
    wowusbgui = WowUSB.gui:main

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[check]
strict = 1

